##########################
# Setup.py Configuration #
##########################

# Configuring setup()
[metadata]
name = bio2bel_mirbase
version = 0.3.0-dev
description = Convert miRBase to BEL
long_description = file: README.rst

url = https://github.com/bio2bel/mirbase
download_url = https://github.com/bio2bel/mirbase/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/mirbase/issues
    Documentation = https://flagman.readthedocs.io/en/latest/
    Source Code = https://github.com/bio2bel/mirbase

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    microRNA
    bioinformatics
    systems biology
    networks biology
    biological expression language

[options]
python_requires = >=3.7
install_requires =
    click
    tqdm
    bio2bel>=0.3.0,<0.4.0
    pybel>=0.14.0,<0.15.0

packages = find:
package_dir =
    = src
zip_safe = true

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flask-admin
docs =
    flask
    flask_admin
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_mirbase = bio2bel_mirbase.cli:main
bio2bel =
    mirbase = bio2bel_mirbase
